@@ -33,6 +33,7 @@
     <File name="./src/TargetWindow.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/TargetService.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/UriList.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/TransferStatusArgs.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="avahi-sharp, Version=1.0.0.0, Culture=neutral, PublicKeyToken=4d116c78973743f5" />
