@@ -1,5 +1,10 @@
 2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 
 
+	* src/SendingHandler.cs, src/Makefile.am, src/TransferStatusArgs.cs,
+	  giver.mdp: Added TransferStatusArgs
+
+2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 
+
 	* src/SendingHandler.cs: ReadOnly file transfers
 	* src/RequestHandler.cs: Fixed the readonly file stuff
 	* configure.ac: Bumped the version
